--- a/package.json
+++ b/package.json
@@ -9,20 +9,38 @@
     "test:ci": "jest --ci"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
+    "@hookform/resolvers": "^2.8.8",
+    "@prisma/client": "^3.12.0",
+    "@types/next": "^9.0.0",
+    "cuid": "^2.1.8",
+    "framer-motion": "^6.3.1",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-hook-form": "^7.30.0",
+    "react-loader-spinner": "^6.0.0-0",
+    "react-query": "^3.38.0",
+    "react-table": "^7.7.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "5.16.1",
     "@testing-library/react": "12.1.2",
     "@testing-library/user-event": "13.5.0",
     "@types/react": "17.0.38",
+    "@types/react-table": "^7.7.11",
+    "autoprefixer": "^10.4.5",
     "babel-jest": "27.4.5",
     "eslint": "8.5.0",
     "eslint-config-next": "latest",
     "eslint-plugin-testing-library": "5.0.1",
     "jest": "27.4.5",
+    "postcss": "^8.4.12",
+    "prisma": "^3.12.0",
+    "tailwindcss": "^3.0.24",
     "typescript": "4.5.4"
   }
 }
